added jquery based date picker via directive

--- a/pointy-web/src/main/webapp/app/index.html
+++ b/pointy-web/src/main/webapp/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pointy Patient</title>
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>    
 </head>
@@ -21,13 +22,18 @@
 
 </div>
 <!-- Libraries -->
+
+<!-- place jquery BEFORE angular -->
+<script src="lib/jquery/jquery-1.10.2.js"></script>
+<script src="lib/jquery/jquery-ui-1.10.3.js"></script>
+
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular/restangular.js"></script>
 <script src="lib/angular/angular-resource.js"></script>
 <script src="lib/underscore/underscore-min.js"></script>
-<script src="lib/jquery/jquery-1.10.2.js"></script> 
-<script src="lib/jquery/jquery-ui-1.10.3.custom.js"></script>
 <script src="lib/bootstrap/ui-bootstrap-tpls-0.4.0.js"></script>
+<script src="lib/bootstrap/bootstrap-datepicker.js"></script> 
+
 <script src="lib/date/xdate.js"></script>
 
 <!-- Routes and config-->
