Added stacked bar chart and pie chart using angular directives and d3.

--- a/pointy-web/src/test/unit/SpecRunner.html
+++ b/pointy-web/src/test/unit/SpecRunner.html
@@ -24,18 +24,21 @@
     <script type="text/javascript" src="../lib/angular-mocks.js"></script>
     <script type="text/javascript" src="../../main/webapp/app/lib/angular/restangular.js"></script>
     <script type="text/javascript" src="../../main/webapp/app/lib/underscore/underscore.js"></script> 
+    <script type="text/javascript" src="../../main/webapp/app/lib/date/xdate.js"></script> 
 
     <!-- Script source to test and other files on which source depends -->
     <script type="text/javascript" src="../../main/webapp/app/js/app.js"></script>
     <script type="text/javascript" src="../../main/webapp/app/js/controllers/MainMenuController.js"></script>  
     <script type="text/javascript" src="../../main/webapp/app/js/controllers/PatientController.js"></script>  
     <script type="text/javascript" src="../../main/webapp/app/js/services/PatientService.js"></script> 
+    <script type="text/javascript" src="../../main/webapp/app/js/services/ReportingService.js"></script> 
     <script type="text/javascript" src="../../main/webapp/app/js/services/PointyDateService.js"></script> 
     <script type="text/javascript" src="../../main/webapp/app/js/directives/DatePicker.js"></script> 
 
     
     <!-- Test script -->
     <script type="text/javascript" src="services/PatientServiceSpec.js"></script> 
+    <script type="text/javascript" src="services/ReportingServiceSpec.js"></script> 
     <script type="text/javascript" src="controllers/PatientControllerSpec.js"></script>  
 </head>
 <body>
