--- a/pointy-web/src/main/webapp/app/index.html
+++ b/pointy-web/src/main/webapp/app/index.html
@@ -14,6 +14,8 @@
             <ul class="nav">
                 <li><a href="#/registerPatient">Register Patient</a></li>
                 <li><a href="#/patients" >List Patients</a></li>
+                <li><a href="#/pointyStackedBarChart" >Stacked Bar Chart</a></li>
+                <li><a href="#/pointyPieChart" >Pie Chart</a></li>
             </ul>
         </div>
     </div>
@@ -34,6 +36,8 @@
 <script src="lib/bootstrap/ui-bootstrap-tpls-0.4.0.js"></script>
 <script src="lib/bootstrap/bootstrap-datepicker.js"></script> 
 
+<script src="lib/d3/d3.v3.js"></script>
+
 <script src="lib/date/xdate.js"></script>
 
 <!-- Routes and config-->
@@ -42,13 +46,18 @@
 <!-- Controllers -->
 <script src="js/controllers/MainMenuController.js"></script>
 <script src="js/controllers/PatientController.js"></script>
+<script src="js/controllers/StackedBarChartController.js"></script>
+<script src="js/controllers/PieChartController.js"></script>
 
 <!-- Services -->
 <script src="js/services/PatientService.js"></script>
 <script src="js/services/PointyDateService.js"></script>
+<script src="js/services/ReportingService.js"></script>
 
-<!-- Directves -->
+<!-- Directives -->
 <script src="js/directives/DatePicker.js"></script>
+<script src="js/directives/PointyStackedBarChart.js"></script>
+<script src="js/directives/PointyPieChart.js"></script>
 
 
 
